--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body style="text-align: center; background-color: rgb(64, 217, 204); color: aliceblue;">
         <!--this is the first lactare in html-->
+        <hr>
             <h1 style="text-align: center;">Welcom to my training website</h1>
         <hr>
             <p>This website for <b>training</b></p>
@@ -32,11 +33,14 @@
             veniam quo hic quae sed numquam?
         </pre>
         <hr>
-        <a href="https://learnworld.learnworlds.com/start" target="_blank">SDK web site</a>
+            <a href="https://learnworld.learnworlds.com/start" target="_blank">SDK web site</a>
         <br> <hr>
-        <a href="home.html">Go to home page</a>
+            <a href="home.html">Go to home page</a>
         <br> <hr>
-        <img src="images.jpg" alt="tree images">
+            <img src="images.jpg" alt="tree images">
+        <hr><br>
+            <a href="form.html">Go To Form</a>
+
         <br> <hr>
         <ul> Full Name 
             <li>first name : Mohammed</li>
