--- a/form.html
+++ b/form.html
@@ -42,5 +42,7 @@
         <input type="month" id="month" name="month" placeholder="Enter your month" required>
     <br><hr>
     <button>Insert</button>
+    <hr><br>
+    <a href="index.html">Back to Home bage</a>
 </body>
 </html>
